--- a/.github/workflows/flatpak-update-check.yml
+++ b/.github/workflows/flatpak-update-check.yml
@@ -65,8 +65,8 @@ jobs:
         if: steps.check_update.outputs.update_needed == 'true'
         run: |
           cd com.jetbrains.IntelliJ-IDEA-Community
-          flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
-          flatpak install -y flathub org.freedesktop.Sdk/x86_64/23.08
+          sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
+          sudo flatpak install -y flathub org.freedesktop.Sdk/x86_64/23.08
           flatpak-builder --force-clean build-dir com.jetbrains.IntelliJ-IDEA-Community.yaml
 
       - name: Upload Flatpak artifact
