--- a/.github/workflows/flatpak-update-check.yml
+++ b/.github/workflows/flatpak-update-check.yml
@@ -70,7 +70,7 @@ jobs:
           cd com.jetbrains.IntelliJ-IDEA-Community          
           sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo          
           sudo flatpak install -y flathub org.freedesktop.Sdk/x86_64/23.08          
-          flatpak-builder --force-clean --repo=repo build-dir com.jetbrains.IntelliJ-IDEA-Community.yaml          
+          flatpak-builder --force-clean --disable-cache --repo=repo build-dir com.jetbrains.IntelliJ-IDEA-Community.yaml          
           flatpak build-bundle repo intellij-community-edition.flatpak com.jetbrains.IntelliJ-IDEA-Community
 
       - name: Upload Flatpak artifact        
