--- a/.github/workflows/flatpak-update-check.yml
+++ b/.github/workflows/flatpak-update-check.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Update Ubuntu
-        run: sudo apt-get update && sudo apt get upgrade
+        run: sudo apt-get update && sudo apt-get upgrade
 
       - name: Install flatpak-builder
         run: sudo apt-get install -y flatpak-builder
